--- a/src/app/page/signup/signup.component.html
+++ b/src/app/page/signup/signup.component.html
@@ -1,1 +1,45 @@
-<p>signup works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-md-6 offset-md-3">
+                <div class="container text-center">
+                    <img src="../../../assets/img/registered.png" alt="Login" width="100" height="100">
+                </div>
+                <h1 class="text-center">Register here!</h1>
+
+                <form action="">
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Username:</mat-label>
+                        <input matInput placeholder="Enter username">
+                    </mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Password:</mat-label>
+                        <input type="password" matInput placeholder="Enter password">
+                    </mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Firstname:</mat-label>
+                        <input matInput placeholder="Enter firstname">
+                    </mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Lastname:</mat-label>
+                        <input matInput placeholder="Enter lastname">
+                    </mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Email:</mat-label>
+                        <input type="email" matInput placeholder="Enter email">
+                    </mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Telephone:</mat-label>
+                        <input matInput placeholder="Enter telephone">
+                    </mat-form-field>
+
+                    <div class="container text-center">
+                        <button mat-raised-button color="primary">Register</button>
+                        <button style="margin-left: 20px;" mat-raised-button color="accent">Clear</button>
+                    </div>
+                </form>
+                <br><br><br>
+            </div>
+        </div>
+    </div>
+</div>
