--- a/src/app/page/signup/signup.component.html
+++ b/src/app/page/signup/signup.component.html
@@ -7,30 +7,36 @@
                 </div>
                 <h1 class="text-center">Register here!</h1>
 
-                <form action="">
+                <form (ngSubmit)="formSubmit()">
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Username:</mat-label>
-                        <input matInput placeholder="Enter username">
+                        <input required [(ngModel)]="user.username" name="username" matInput placeholder="Enter username">
+                        <mat-hint>The username has be unique</mat-hint>
                     </mat-form-field>
+
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Password:</mat-label>
-                        <input type="password" matInput placeholder="Enter password">
+                        <input [(ngModel)]="user.password" name="password" type="password" matInput placeholder="Enter password">
                     </mat-form-field>
+
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Firstname:</mat-label>
-                        <input matInput placeholder="Enter firstname">
+                        <input [(ngModel)]="user.firstname" name="firstname" matInput placeholder="Enter firstname">
                     </mat-form-field>
+
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Lastname:</mat-label>
-                        <input matInput placeholder="Enter lastname">
+                        <input [(ngModel)]="user.lastname" name="lastname" matInput placeholder="Enter lastname">
                     </mat-form-field>
+                    
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Email:</mat-label>
-                        <input type="email" matInput placeholder="Enter email">
+                        <input [(ngModel)]="user.email" name="email" type="email" matInput placeholder="Enter email">
                     </mat-form-field>
+                    
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Telephone:</mat-label>
-                        <input matInput placeholder="Enter telephone">
+                        <input [(ngModel)]="user.telephone" name="telephone" matInput placeholder="Enter telephone">
                     </mat-form-field>
 
                     <div class="container text-center">
