--- a/src/app/page/signup/signup.component.html
+++ b/src/app/page/signup/signup.component.html
@@ -9,33 +9,33 @@
 
                 <form (ngSubmit)="formSubmit()">
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Username:</mat-label>
+                        <mat-label>Username</mat-label>
                         <input required [(ngModel)]="user.username" name="username" matInput placeholder="Enter username">
                         <mat-hint>The username has be unique</mat-hint>
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Password:</mat-label>
+                        <mat-label>Password</mat-label>
                         <input required [(ngModel)]="user.password" name="password" type="password" matInput placeholder="Enter password">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Firstname:</mat-label>
+                        <mat-label>Firstname</mat-label>
                         <input required [(ngModel)]="user.firstname" name="firstname" matInput placeholder="Enter firstname">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Lastname:</mat-label>
+                        <mat-label>Lastname</mat-label>
                         <input required [(ngModel)]="user.lastname" name="lastname" matInput placeholder="Enter lastname">
                     </mat-form-field>
                     
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Email:</mat-label>
+                        <mat-label>Email</mat-label>
                         <input required [(ngModel)]="user.email" name="email" type="email" matInput placeholder="Enter email">
                     </mat-form-field>
                     
                     <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Telephone:</mat-label>
+                        <mat-label>Telephone</mat-label>
                         <input required [(ngModel)]="user.telephone" name="telephone" matInput placeholder="Enter telephone">
                     </mat-form-field>
 
